--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html> 
 <body>
  <h1>这个域名还没被启用喵</h1> 
-<p>用来干什么也没想好喵
+<p size="1">用来干什么也没想好喵
 
 ###################################################################################################%%############################################################################################################################%%##*****************************#%%%#######################################################################%##################################################################
 ##################################################################################################%%#############################################################################################################################%%##*******************************#%%%#####################################################################%%#################################################################
