--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="三し的网站索引页，提供文本、图片转ASCII艺术画工具链接，以及赞助支持和个人B站账号信息">
+    <meta name="description" content="三し的网站索引页，提供文本、图片转ASCII艺术画工具链接及B站账号信息">
     <title>欢迎访问三し的网站索引页</title>
     <style>
         a:link {
