--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>欢迎访问三し的网站索引页</title>
     <style>
         a:link {
-            color: white;
+            color: black;
         }
 
         a:visited {
-            color: white;
+            color: black;
         }
 
         a:hover {
-            color: white;
+            color: black;
         }
 
         a:active {
-            color: white;
+            color: black;
         }
     </style>
 </head>
