--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <ul>
         <li><a href="https://ascii.gal.us.kg" target="_blank">文本、图片转ASCII艺术画</a></li>
+        <li><a href="https://suoyin.gal.us.kg" target="_blank">galgame相关网站索引</a></li>
         <li><a href="https://donate.gal.us.kg" target="_blank">赞助支持</a></li>
         <li><a href="https://b23.tv/G2AQkMd" target="_blank">B站账号</a></li>
     </ul>
