--- a/files/index.html
+++ b/files/index.html
@@ -7,8 +7,8 @@
 <body>
     <h1>文件列表</h1>
     <ul>
-        <li><a href="0721记录簿.exe" target="_blank">0721记录簿.exe</a></li>
-        <li><a href="" target="_blank"></a></li>
+        <li><a href="0721记录簿.exe" target="_blank" style="color: black;">0721记录簿.exe</a></li>
+        <li><a href="" target="_blank" style="color: black;"></a></li>
         <!-- 继续添加已知文件 -->
     </ul>
 </body>
