--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="https://ascii.gal.us.kg" target="_blank">文本、图片转ASCII艺术画</a></li>
         <li><a href="https://suoyin.gal.us.kg" target="_blank">galgame相关网站索引</a></li>
         <li><a href="https://gal.us.kg/files" target="_blank">文件下载</a></li>
+         <li><a href="https://suisuinian.gal.us.kg" target="_blank">碎碎念</a></li>
         <li><a href="https://donate.gal.us.kg" target="_blank">赞助支持(未成年人勿入）</a></li>
         <li><a href="https://b23.tv/G2AQkMd" target="_blank">B站账号</a></li>
         
